--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -108,11 +108,28 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.test.testapp.view.ExplorerTabView
+        android:id="@+id/v_tabs"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintTop_toBottomOf="@id/v_search" />
+
+    <ImageView
+        android:id="@+id/iv_test"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:layout_marginHorizontal="16dp"
-        app:layout_constraintTop_toBottomOf="@id/v_search"/>
+        android:src="@drawable/test_image"
+        app:layout_constraintTop_toBottomOf="@+id/v_tabs" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_data"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/iv_test"
+        tools:listitem="@layout/item_comment" />
 
     <com.test.testapp.view.LoadingView
         android:id="@+id/v_loading"
