--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,8 @@
     <color name="black_50">#80000000</color>
     <color name="black_85">#D8000000</color>
 
+    <color name="gray">#7F888D</color>
+
     <color name="white">#FFFFFF</color>
     <color name="white_50">#80FFFFFF</color>
 
